--- a/index.html
+++ b/index.html
@@ -33,11 +33,9 @@
             <form>
                 <label for="email"></label>
                 <input id="email" type="email" placeholder="Your email address">
-       
-
                 <button>Subscribe now</button>
-
             </form> 
+        </section>
 
         <section>
 
@@ -62,33 +60,33 @@
         </section>
 
     <section>
-            <img src="./assets/iPhone-mockup-content.png" alt="iphonecontent">
-            <h1>Its tastes like Premium</h1>
-            <h3>Better than an apple.</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <button>Subscribe now</button>
+        <img src="./assets/iPhone-mockup-content.png" alt="iphonecontent">
+        <h1>Its tastes like Premium</h1>
+        <h3>Better than an apple.</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <button>Subscribe now</button>
     </section>
 
     <section>
 
-           <header>
-            <p>What Our
-                Customers Say</p>
-                <img src="./assets/quote.png" alt="quotebig">
-           </header>
+        <header>
+        <p>What Our
+            Customers Say</p>
+            <img src="./assets/quote.png" alt="quotebig">
+        </header>
 
-            <section>
-                <img src="./assets/quote-white.png" alt="quotewhite">
-                <p>“I love oranges!!
-                    tasty mmmmm…..”</p>
-                <p> Marjon Siero / Ironhack </p>
-            </section>
+        <section>
+            <img src="./assets/quote-white.png" alt="quotewhite">
+            <p>“I love oranges!!
+                tasty mmmmm…..”</p>
+            <p> Marjon Siero / Ironhack </p>
+        </section>
 
-            <section>
-                <img src="./assets/quote-white.png" alt="quotewhite">
-                <p>“If life gives you l</p>
-                <p> Dina Korkmazova / Ironhack </p>
-            </section>
+        <section>
+            <img src="./assets/quote-white.png" alt="quotewhite">
+            <p>“If life gives you l</p>
+            <p> Dina Korkmazova / Ironhack </p>
+        </section>
 
     </section>
 
@@ -97,8 +95,8 @@
          <h2>Subscribe today and get notified first!</h2>
          <h2>Product launch in: 12 days</h2>
          <form>
-                <label for="email"></label>
-                <input id="email" type="email" placeholder="Your email address">
+            <label for="email"></label>
+            <input id="email1" type="email" placeholder="Your email address">
         </form>
 
         <button>Subscribe now</button>
@@ -106,9 +104,7 @@
     </section>
 
 
-    </main>
-</body>
-  <footer>
+    <footer>
       <p>© 2019 Orange All Right Reserved</p>
       <nav>
             <ul>
@@ -120,6 +116,7 @@
             </ul>
         </nav>
 
-  </footer>
- 
+     </footer>
+    </main> 
+</body>
 </html>
